fix for aide path in erb

--- a/templates/aide.erb
+++ b/templates/aide.erb
@@ -6,4 +6,4 @@
 # Don't edit manually, puppet will override any
 # modification on next agent run!!!!
 
-nice -19 /usr/local/bin/aide --config='<%= @aideconf_path -%>' -C
+nice -19 /usr/sbin/aide --config='<%= @aideconf_path -%>' -C
