--- a/templates/selinux.erb
+++ b/templates/selinux.erb
@@ -10,8 +10,8 @@
 #     enforcing - SELinux security policy is enforced.
 #     permissive - SELinux prints warnings instead of enforcing.
 #     disabled - No SELinux policy is loaded.
-SELINUX=<%= @selinuxconfigenforcing_selinux -%>
+SELINUX=<%= @selinuxconfigenforcing_selinux %>
 # SELINUXTYPE= can take one of these two values:
 #     targeted - Targeted processes are protected,
 #     mls - Multi Level Security protection.
-SELINUXTYPE=<%= @selinuxconfigenforcing_selinuxtype -%>
+SELINUXTYPE=<%= @selinuxconfigenforcing_selinuxtype %>
